[project]
name = "access-ci-account-api"
version = "0.11.1"
description = "API for ACCESS CI accounts and registration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyJWT>=2.8.0",
    "argon2-cffi>=25.1.0",
    "asyncache>=0.1.1",
    "boto3>=1.41.2",
    "cachetools>=7.1.1",
    "fastapi-utilities>=0.3.1",
    "fastapi[standard]>=0.120.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pymemcache>=4.0.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.27",
    "tldextract>=5.3.1",
]
